# venv-management

./: .bumpversion.cfg  .gitignore  LICENSE.txt  README.md  README.rst  pyproject.toml  setup.cfg  setup.py
.github/workflows/: actions.yml
docs/: requirements.txt
docs/source/: conf.py  configuration.rst  index.rst  installation.rst
source/venv_management/: __init__.py  tools.py
src/venv_management/: __init__.py  api.py  driver.py  environment.py  errors.py  extension.py  pyenv_config.py  shell.py  tools.py  utilities.py  version.py
src/venv_management/ext/drivers/conda/: __init__.py  driver.py
src/venv_management/ext/drivers/pyenv_virtualenv/: __init__.py  driver.py
src/venv_management/ext/drivers/virtualenv_sh/: __init__.py  driver.py
src/venv_management/ext/drivers/virtualenvwrapper/: driver.py
tests/: test_check_environment.py  test_discard_virtual_env.py  test_ensure_virtual_env.py  test_environment.py  test_has_virtualenvwrapper.py  test_list_virtual_envs.py  test_make_virtual_env.py  test_remove_virtual_env.py  test_resolve_virtual_env.py  test_virtual_env_context_manager.py
