[metadata]
name = venv-management
version = attr: venv_management.__version__
description = A Python package for programmatic creation of Python virtual environments
long_description = file: README.rst, LICENSE.txt
long_description_content_type = text/x-rst
url = https://github.com/sixty-north/venv-management
author = Sixty North AS
author_email: systems+venv_management@sixty-north.com
keywords = virtual-environment
license = MIT License
classifiers =
    Development Status :: 5 - Production/Stable
    Topic :: Scientific/Engineering
    License :: OSI Approved :: MIT License
    Programming Language :: Python :: 3 :: Only
    Programming Language :: Python :: 3.7
    Programming Language :: Python :: 3.8
    Programming Language :: Python :: 3.9

[options]
zip_safe = True
include_package_data = False
package_dir =
    =src
packages = find:
install_requires =

[options.extras_require]
dev = bumpversion
test = pytest

[options.packages.find]
where = src
